--- a/Application/src/main/res/layout/fragment_camera.xml
+++ b/Application/src/main/res/layout/fragment_camera.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/camera_fragment_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CameraFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.camera.view.PreviewView
+        android:id="@+id/texture_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_above="@id/capture_button"
+        android:layout_marginBottom="@dimen/margin_medium" />
 
-</FrameLayout>
+    <ImageButton
+        android:id="@+id/capture_button"
+        android:src="@drawable/ic_baseline_camera_24"
+        android:background="@drawable/button_normal"
+        android:layout_marginBottom="@dimen/margin_medium"
+        android:layout_width="@dimen/margin_large"
+        android:layout_height="wrap_content"
+        android:scaleType="centerInside"
+        android:scaleX="2"
+        android:scaleY="2"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/margin_large"
+        android:layout_alignParentBottom="true"
+        android:contentDescription="@string/picture"
+        />
+
+</RelativeLayout>
